# xf86-input-libinput

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  xorg-libinput.pc.in
conf/: 90-libinput.conf
include/: Makefile.am  libinput-properties.h
man/: libinput.man
src/: Makefile.am  bezier.c  bezier.h  draglock.c  draglock.h  libinput.c  xf86libinput.c
test/: .gitignore  Makefile.am  test-bezier.c  test-draglock.c
